commented out a footer text

--- a/withdrawals/templates/withdrawals/receipt.html
+++ b/withdrawals/templates/withdrawals/receipt.html
@@ -181,7 +181,7 @@
     <div class="receipt-footer text-center">
         <p>This document serves as official confirmation of the completed withdrawal transaction.</p>
         <p>Generated electronically and does not require a physical signature.</p>
-        <p>Support: support@riazvest.com</p>
+        <!-- <p>Support: support@riazvest.com</p> -->
     </div>
 
 </div>
