fix the approved withdrawal

--- a/withdrawals/templates/withdrawals/emails/withdrawal_approved.html
+++ b/withdrawals/templates/withdrawals/emails/withdrawal_approved.html
@@ -7,8 +7,8 @@
 
 <p>Your withdrawal request has been approved and is now being processed.</p>
 
-<p><strong>Amount:</strong> ${{ withdrawal.amount }}</p>
-<p><strong>Payment Method:</strong> {{ withdrawal.payment_option|upper }}</p>
+<p><strong>Amount:</strong> ${{ amount }}</p>
+<p><strong>Payment Method:</strong> {{ payment_option|upper }}</p>
 
 <p>Funds will be sent shortly.</p>
 {% endblock %}
