using floating buttons

--- a/accounts/templates/account/login.html
+++ b/accounts/templates/account/login.html
@@ -15,7 +15,7 @@
           <br />
           <div class="row">
             {% csrf_token %}
-            {{ form|crispy }}
+            {% crispy form %}
             {% if redirect_field_value %}
               <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
             {% endif %}
